non-compatible/tests/ecc-gcp-129-gke_net_firewall_inbound_to_all_traffic/placebo-green/get-computeMetadata-v1-instance-service-accounts-gcp.lab.cust1@epmcseclab.com-token_1.json
{
  "headers": {
    "server": "BaseHTTP/0.6 Python/3.9.2",
    "date": "Tue, 13 Dec 2022 08:24:47 GMT",
    "content-type": "application/json",
    "metadata-flavor": "Google",
    "status": "200",
    "content-location": "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/gcp.lab.cust1@epmcseclab.com/token?scopes=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform"
  },
  "body": {
    "access_token": "#",
    "expires_in": 2866,
    "token_type": "Bearer"
  }
}
